Rust Client library/SDK for the SeekStorm server REST API
### Added

- Rust Client library/SDK for the SeekStorm server REST API

- Added support for the new `HTTP QUERY` method ([RFC 10008](https://www.rfc-editor.org/info/rfc10008/)) as a more consistent alternative to `HTTP POST`,
  when only information is requested from the server, but not added or modified on the server,
  while we need a request body that the `HTTP GET` method neither officially supports nor forbids, e.g. for search queries.
  Not yet supported in the REST API documentation, that is based on OpenAPI, which does support `HTTP QUERY` only in OpenAPI version 3.2.

### Changed

- Iterator REST API endpoint changed from "/api/v1/index/{}/doc_id" -> "/api/v1/index/{}/iterator"
